--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,6 +1,16 @@
-FROM openjdk:20-jre-slim
-VOLUME /tmp
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+# FROM openjdk:20-jre-slim
+# VOLUME /tmp
+# ARG JAR_FILE=target/*.jar
+# COPY ${JAR_FILE} app.jar
+# ENTRYPOINT ["java","-jar","/app.jar"]
+# EXPOSE 8080
+
+
+
+FROM openjdk:21
+
 EXPOSE 8080
+
+COPY target/*.jar ticket-booking-server.jar
+
+ENTRYPOINT ["java", "-jar", "/attendance-system-server.jar"]
