--- a/back-end/springboot/src/main/resources/application.properties
+++ b/back-end/springboot/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.Jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/ticket_booking_website
-spring.datasource.username=root
-spring.datasource.password=Thana@1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.ScanPackages=com.project.springboot
-spring.jpa.open-in-view=false
-spring.thymeleaf.cache=false
-spring.jpa.show-sql=true
-api.base.path = http://localhost:9080/login
+#spring.Jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/ticket_booking_website
+#spring.datasource.username=root
+#spring.datasource.password=Thana@1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.ScanPackages=com.project.springboot
+#spring.jpa.open-in-view=false
+#spring.thymeleaf.cache=false
+#spring.jpa.show-sql=true
+#api.base.path = http://localhost:9080/login
 
 
 #server:
@@ -45,3 +45,9 @@ api.base.path = http://localhost:9080/login
 #      connectiontimeout: 5000
 #      timeout: 3000
 #      writetimeout: 5000
+
+
+spring.application.name=back-end
+logging.level.root=INFO
+logging.level.com.attendance_system.server=DEBUG
+logging.file.name=logs/app.log
