--- a/back-end/springboot/Dockerfile
+++ b/back-end/springboot/Dockerfile
@@ -7,10 +7,7 @@
 
 
 
-FROM openjdk:21
-
-EXPOSE 8080
-
-COPY target/*.jar ticket-booking-server.jar
-
-ENTRYPOINT ["java", "-jar", "/ticket-booking-server.jar"]
+FROM eclipse-temurin:20
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
