--- a/back-end/springboot/pom.xml
+++ b/back-end/springboot/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.project</groupId>
 	<artifactId>springboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>springboot</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -50,6 +51,13 @@
 			<artifactId>thymeleaf</artifactId>
 			<version>3.0.11.RELEASE</version>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.retry</groupId>-->
+<!--			<artifactId>spring-retry</artifactId>-->
+<!--			<version>1.3.1</version>-->
+<!--		</dependency>-->
+
 
 
 
