--- a/back-end/springboot/src/main/resources/application.properties
+++ b/back-end/springboot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://booking-mysqldb:3306/ticket_booking_website
+spring.datasource.url=jdbc:mysql://mysqldb:3306/ticket_booking_website
 spring.datasource.username=thana
 spring.datasource.password=Thana@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
