--- a/back-end/springboot/pom.xml
+++ b/back-end/springboot/pom.xml
@@ -52,11 +52,11 @@
 			<version>3.0.11.RELEASE</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.retry</groupId>-->
-<!--			<artifactId>spring-retry</artifactId>-->
-<!--			<version>1.3.1</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 
 
 
