--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,45 @@
-# version: '3'
-# services:
-#   client:
-#     image: front-end-image:latest
-#     build:
-#       context: ./front-end
-#       dockerfile: Dockerfile
-#     ports:
-#       - "3000:3000"
-#     networks:
-#       - apps-net
+# # version: '3'
+# # services:
+# #   client:
+# #     image: front-end-image:latest
+# #     build:
+# #       context: ./front-end
+# #       dockerfile: Dockerfile
+# #     ports:
+# #       - "3000:3000"
+# #     networks:
+# #       - apps-net
 
-#   server:
-#     image: back-end-image:latest
-#     build:
-#       context: ./back-end/springboot
-#       dockerfile: Dockerfile
-#     ports:
-#       - "8080:8080"
-#     networks:
-#       - apps-net
-#     depends_on:
-#       - mysqldb
-#     volumes:
-#       - ./back-end/springboot/src/main/resources/application.properties:/app/application.properties
+# #   server:
+# #     image: back-end-image:latest
+# #     build:
+# #       context: ./back-end/springboot
+# #       dockerfile: Dockerfile
+# #     ports:
+# #       - "8080:8080"
+# #     networks:
+# #       - apps-net
+# #     depends_on:
+# #       - mysqldb
+# #     volumes:
+# #       - ./back-end/springboot/src/main/resources/application.properties:/app/application.properties
 
-#   mysqldb:
-#     image: mysql:latest
-#     container_name: booking-mysqldb
-#     networks:
-#       - apps-net
-#     ports:
-#       - "3306:3306"
-#     environment:
-#       MYSQL_DATABASE: ticket_booking_website
-#       MYSQL_USER: thana
-#       MYSQL_PASSWORD: Thana@1234
-#       MYSQL_ROOT_PASSWORD: root_password
+# #   mysqldb:
+# #     image: mysql:latest
+# #     container_name: booking-mysqldb
+# #     networks:
+# #       - apps-net
+# #     ports:
+# #       - "3306:3306"
+# #     environment:
+# #       MYSQL_DATABASE: ticket_booking_website
+# #       MYSQL_USER: thana
+# #       MYSQL_PASSWORD: Thana@1234
+# #       MYSQL_ROOT_PASSWORD: root_password
 
-# networks:
-#   apps-net:
-#     driver: bridge
+# # networks:
+# #   apps-net:
+# #     driver: bridge
 
 
 version: '3'
@@ -52,3 +52,12 @@ services:
   #   image: server-image:latest
   #   ports:
   #     - "8080:8080"
+
+
+
+
+
+
+
+
+
