--- a/back-end/springboot/src/main/resources/application.properties
+++ b/back-end/springboot/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=thana
 spring.datasource.password=Thana@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.ScanPackages=com.project.springboot
-spring.jpa.open-in-view=false
-spring.thymeleaf.cache=false
-spring.jpa.show-sql=true
+spring.datasource.platform=mysql
+spring.jpa.hibernate.ddl-auto=update
+
